0.22.4	UNRELEASED

 * Fix handling of symrefs with protocol v2.
   (Jelmer Vernooĳ, #1389)

0.22.3	2024-10-15

 * Improve wheel building in CI, so we can upload wheels for the next release.
   (Jelmer Vernooĳ)

0.22.2	2024-10-09

 * Ship ``Cargo.lock``. (Jelmer Vernooĳ, #1287)

 * Ship ``tests/`` and ``testdata/`` in sdist. (Jelmer Vernooĳ, #1292)

 * Add initial integration with OSS-Fuzz for continuous fuzz testing and first fuzzing test (David Lakin, #1302)

 * Drop Python 3.7 support. (Jelmer Vernooĳ)

 * Improve fuzzing coverage (David Lakin)

 * Support Python 3.13. (Edgar Ramírez-Mondragón, #1352)

 * Initial support for smart protocol v2. (Stefan Sperling)

0.22.1	2024-04-23

 * Handle alternate case for worktreeconfig setting (Will Shanks, #1285)

 * Ship rust files. (Jelmer Vernooĳ, #1287)

0.22.0	2024-04-22

 * Stop installing docs/ as part of package code. (Jelmer Vernooĳ, #1248)

 * Move tests to root. (Jelmer Vernooĳ, #1024)

 * Convert the optional C implementations to Rust.
   (Jelmer Vernooĳ)

0.21.7	2023-12-05
 * Fix NameError when encountering errors during HTTP operation.
   (Jelmer Vernooĳ, #1208)

 * Raise exception when default identity can't be found.
   (Jelmer Vernooĳ)

 * Add a dedicated exception class for unresolved
   deltas. (Jelmer Vernooĳ, #1221)

 * Support credentials in proxy URL. (Jelmer Vernooĳ, #1227)

 * Add ``dulwich.porcelain.for_each_ref``. (Daniele Trifirò)

0.21.6	2023-09-02

 * Convert _objects.c to rust.
   (Jelmer Vernooĳ)

 * index: Handle different stages of conflicted paths.
   (Kevin Hendricks, Jelmer Vernooĳ)

 * Improve LCA finding performance. (Kevin Hendricks)

 * client: Handle Content-Type with encoding set.
   (Antoine Lambert)

 * Only import _hashlib for type checking.
   (David Hotham)

 * Update docs regarding building dulwich without c bindings (#103)
   (Adam Plaice)

 * objects: Define a stricter return type for _parse_message
   (Vincent Lorentz)
